# cpputils2

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt
examples/linux_deadline/: CMakeLists.txt
examples/linux_deadline/src/: main.cpp
examples/shared_memory/: CMakeLists.txt
examples/shared_memory/src/: main.cpp
src/: CMakeLists.txt
src/cmake/: Cpputils2Config.cmake.in
src/include/cpputils2/: cpputils2.hpp  cpputils2.hpp.in
src/include/cpputils2/common/: types.hpp
src/include/cpputils2/file/: file.hpp
src/include/cpputils2/linux/futex/: futex.hpp  shared_futex.hpp
src/include/cpputils2/linux/net/socket/: dgramsocket.hpp  isocket.hpp  socket.hpp  tcpsocketclient.hpp  tcpsocketserver.hpp  udpsocketclient.hpp  udpsocketserver.hpp  udsclient.hpp  udsserver.hpp
src/include/cpputils2/linux/priomutex/: priomutex.hpp
src/include/cpputils2/linux/sched/: sched.hpp
src/include/cpputils2/linux/shm/: shm.hpp
src/include/cpputils2/linux/thread/: thread.hpp
src/include/cpputils2/net/socket/: isocket.hpp
src/include/cpputils2/trigger/: trigger.hpp
src/include/cpputils2/win/net/socket/: socket.hpp  tcpsocketclient.hpp  tcpsocketserver.hpp
src/include/cpputils2/win/shm/: shm.hpp
src/test/: cpputils2_tests.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
